// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generator build when builders throw an error logs the error and rethrows 1`] = `
[
  [
    "testing error handling",
  ],
]
`;

exports[`Generator when re-registering an already-registered type outputs a warning 1`] = `
"import { z } from zod;
export type PrimitiveValueType = string | number | boolean | null;
export type SimpleValueType = PrimitiveValueType | Date;
export type SerializableValueType = SimpleValueType | {
    [key in string]: SerializableValueType | undefined;
} | Array<SerializableValueType> | ReadonlyArray<SerializableValueType>;
export type MapToSerializable<T> = T extends SerializableValueType ? T : T extends Array<infer U> ? Array<MapToSerializable<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<MapToSerializable<U>> : T extends {
    [K in keyof T]: K extends string ? T[K] extends SimpleValueType ? T[K] : T[K] extends Function ? never : MapToSerializable<T[K]> : never;
} ? T : never;
export const DEFAULT = Symbol("DEFAULT");
export const SomehowDuplicatedTypeName$Metadata = {} as const;
export const SomehowDuplicatedTypeName$Schema = z.object({});
export const SomehowDuplicatedTypeName$Schema = z.object({});
export interface SomehowDuplicatedTypeName {
}
"
`;

exports[`Generator when re-registering an already-registered type outputs a warning 2`] = `
[
  [
    "Duplicate table name detected: somehow_duplicated_type_name. This is not supported, skipping.",
  ],
]
`;

exports[`Generator with default options generates metadata and select/insert schemas 1`] = `
"import { z } from zod;
export type PrimitiveValueType = string | number | boolean | null;
export type SimpleValueType = PrimitiveValueType | Date;
export type SerializableValueType = SimpleValueType | {
    [key in string]: SerializableValueType | undefined;
} | Array<SerializableValueType> | ReadonlyArray<SerializableValueType>;
export type MapToSerializable<T> = T extends SerializableValueType ? T : T extends Array<infer U> ? Array<MapToSerializable<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<MapToSerializable<U>> : T extends {
    [K in keyof T]: K extends string ? T[K] extends SimpleValueType ? T[K] : T[K] extends Function ? never : MapToSerializable<T[K]> : never;
} ? T : never;
export const DEFAULT = Symbol("DEFAULT");
export const TableWithNoColumns$Metadata = {} as const;
export const TableWithNoColumns$Schema = z.object({});
export const TableWithNoColumns$Schema = z.object({});
export const TableWithNumericId$Metadata = {
    id: {
        nativeName: "id",
        nativeType: "int8"
    }
} as const;
export const TableWithNumericId$Schema = z.object({
    id: z.number()
});
export const TableWithNumericId$Schema = z.object({
    id: z.number().optional().or(DEFAULT)
});
export const TableWithCustomTypes$Metadata = {
    enum_type: {
        nativeName: "enum_type",
        nativeType: "test_enum"
    },
    enum_array_type: {
        nativeName: "enum_array_type",
        nativeType: "test_enum"
    },
    table_type: {
        nativeName: "table_type",
        nativeType: "table_with_uuid_id"
    },
    table_array_type: {
        nativeName: "table_array_type",
        nativeType: "table_with_uuid_id"
    }
} as const;
export const TableWithCustomTypes$Schema = z.object({
    enum_type: z.unknown(),
    enum_array_type: z.array(z.unknown()),
    table_type: z.unknown(),
    table_array_type: z.array(z.unknown())
});
export const TableWithCustomTypes$Schema = z.object({
    enum_type: z.unknown(),
    enum_array_type: z.array(z.unknown()),
    table_type: z.unknown(),
    table_array_type: z.array(z.unknown())
});
export const TableWithUuidId$Metadata = {
    id: {
        nativeName: "id",
        nativeType: "uuid"
    }
} as const;
export const TableWithUuidId$Schema = z.object({
    id: z.string()
});
export const TableWithUuidId$Schema = z.object({
    id: z.string().optional().or(DEFAULT)
});
export const TableWithNullableFields$Metadata = {
    nullable: {
        nativeName: "nullable",
        nativeType: "text"
    },
    nullable_with_default: {
        nativeName: "nullable_with_default",
        nativeType: "text"
    },
    nullable_array: {
        nativeName: "nullable_array",
        nativeType: "text"
    },
    nullable_array_with_default: {
        nativeName: "nullable_array_with_default",
        nativeType: "text"
    }
} as const;
export const TableWithNullableFields$Schema = z.object({
    nullable: z.string().nullable(),
    nullable_with_default: z.string().nullable(),
    nullable_array: z.array(z.string()).nullable(),
    nullable_array_with_default: z.array(z.string()).nullable()
});
export const TableWithNullableFields$Schema = z.object({
    nullable: z.string().nullable(),
    nullable_with_default: z.string().nullable().optional().or(DEFAULT),
    nullable_array: z.array(z.string()).nullable(),
    nullable_array_with_default: z.array(z.string()).nullable().optional().or(DEFAULT)
});
export const TableWithJsonJsonb$Metadata = {
    json: {
        nativeName: "json",
        nativeType: "json"
    },
    jsonb: {
        nativeName: "jsonb",
        nativeType: "jsonb"
    }
} as const;
export const TableWithJsonJsonb$Schema = z.object({
    json: z.unknown(),
    jsonb: z.unknown().nullable()
});
export const TableWithJsonJsonb$Schema = z.object({
    json: z.unknown(),
    jsonb: z.unknown().nullable().optional().or(DEFAULT)
});
"
`;

exports[`Generator with different case conversions properly cases members 1`] = `
"import { z } from zod;
export type PrimitiveValueType = string | number | boolean | null;
export type SimpleValueType = PrimitiveValueType | Date;
export type SerializableValueType = SimpleValueType | {
    [key in string]: SerializableValueType | undefined;
} | Array<SerializableValueType> | ReadonlyArray<SerializableValueType>;
export type MapToSerializable<T> = T extends SerializableValueType ? T : T extends Array<infer U> ? Array<MapToSerializable<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<MapToSerializable<U>> : T extends {
    [K in keyof T]: K extends string ? T[K] extends SimpleValueType ? T[K] : T[K] extends Function ? never : MapToSerializable<T[K]> : never;
} ? T : never;
export const DEFAULT = Symbol("DEFAULT");
export const TableWithNoColumns$Metadata = {} as const;
export const TableWithNoColumns$Schema = z.object({});
export const TableWithNoColumns$Schema = z.object({});
export const TableWithNumericId$Metadata = {
    id: {
        nativeName: "id",
        nativeType: "int8"
    }
} as const;
export const TableWithNumericId$Schema = z.object({
    id: z.number()
});
export const TableWithNumericId$Schema = z.object({
    id: z.number().optional().or(DEFAULT)
});
export const TableWithCustomTypes$Metadata = {
    enumType: {
        nativeName: "enum_type",
        nativeType: "test_enum"
    },
    enumArrayType: {
        nativeName: "enum_array_type",
        nativeType: "test_enum"
    },
    tableType: {
        nativeName: "table_type",
        nativeType: "table_with_uuid_id"
    },
    tableArrayType: {
        nativeName: "table_array_type",
        nativeType: "table_with_uuid_id"
    }
} as const;
export const TableWithCustomTypes$Schema = z.object({
    enumType: z.unknown(),
    enumArrayType: z.array(z.unknown()),
    tableType: z.unknown(),
    tableArrayType: z.array(z.unknown())
});
export const TableWithCustomTypes$Schema = z.object({
    enumType: z.unknown(),
    enumArrayType: z.array(z.unknown()),
    tableType: z.unknown(),
    tableArrayType: z.array(z.unknown())
});
export const TableWithUuidId$Metadata = {
    id: {
        nativeName: "id",
        nativeType: "uuid"
    }
} as const;
export const TableWithUuidId$Schema = z.object({
    id: z.string()
});
export const TableWithUuidId$Schema = z.object({
    id: z.string().optional().or(DEFAULT)
});
export const TableWithNullableFields$Metadata = {
    nullable: {
        nativeName: "nullable",
        nativeType: "text"
    },
    nullableWithDefault: {
        nativeName: "nullable_with_default",
        nativeType: "text"
    },
    nullableArray: {
        nativeName: "nullable_array",
        nativeType: "text"
    },
    nullableArrayWithDefault: {
        nativeName: "nullable_array_with_default",
        nativeType: "text"
    }
} as const;
export const TableWithNullableFields$Schema = z.object({
    nullable: z.string().nullable(),
    nullableWithDefault: z.string().nullable(),
    nullableArray: z.array(z.string()).nullable(),
    nullableArrayWithDefault: z.array(z.string()).nullable()
});
export const TableWithNullableFields$Schema = z.object({
    nullable: z.string().nullable(),
    nullableWithDefault: z.string().nullable().optional().or(DEFAULT),
    nullableArray: z.array(z.string()).nullable(),
    nullableArrayWithDefault: z.array(z.string()).nullable().optional().or(DEFAULT)
});
export const TableWithJsonJsonb$Metadata = {
    json: {
        nativeName: "json",
        nativeType: "json"
    },
    jsonb: {
        nativeName: "jsonb",
        nativeType: "jsonb"
    }
} as const;
export const TableWithJsonJsonb$Schema = z.object({
    json: z.unknown(),
    jsonb: z.unknown().nullable()
});
export const TableWithJsonJsonb$Schema = z.object({
    json: z.unknown(),
    jsonb: z.unknown().nullable().optional().or(DEFAULT)
});
"
`;

exports[`Generator with enums enabled generates enums 1`] = `
"export type PrimitiveValueType = string | number | boolean | null;
export type SimpleValueType = PrimitiveValueType | Date;
export type SerializableValueType = SimpleValueType | {
    [key in string]: SerializableValueType | undefined;
} | Array<SerializableValueType> | ReadonlyArray<SerializableValueType>;
export type MapToSerializable<T> = T extends SerializableValueType ? T : T extends Array<infer U> ? Array<MapToSerializable<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<MapToSerializable<U>> : T extends {
    [K in keyof T]: K extends string ? T[K] extends SimpleValueType ? T[K] : T[K] extends Function ? never : MapToSerializable<T[K]> : never;
} ? T : never;
export const DEFAULT = Symbol("DEFAULT");
export enum TestEnum {
    A = "A",
    B = "b",
    CamelCaseRules = "camel_case_rules"
}
"
`;

exports[`Generator with everything disabled generates nothing 1`] = `
"export type PrimitiveValueType = string | number | boolean | null;
export type SimpleValueType = PrimitiveValueType | Date;
export type SerializableValueType = SimpleValueType | {
    [key in string]: SerializableValueType | undefined;
} | Array<SerializableValueType> | ReadonlyArray<SerializableValueType>;
export type MapToSerializable<T> = T extends SerializableValueType ? T : T extends Array<infer U> ? Array<MapToSerializable<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<MapToSerializable<U>> : T extends {
    [K in keyof T]: K extends string ? T[K] extends SimpleValueType ? T[K] : T[K] extends Function ? never : MapToSerializable<T[K]> : never;
} ? T : never;
export const DEFAULT = Symbol("DEFAULT");
"
`;

exports[`Generator with insert types enabled generates insert types 1`] = `
"export type PrimitiveValueType = string | number | boolean | null;
export type SimpleValueType = PrimitiveValueType | Date;
export type SerializableValueType = SimpleValueType | {
    [key in string]: SerializableValueType | undefined;
} | Array<SerializableValueType> | ReadonlyArray<SerializableValueType>;
export type MapToSerializable<T> = T extends SerializableValueType ? T : T extends Array<infer U> ? Array<MapToSerializable<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<MapToSerializable<U>> : T extends {
    [K in keyof T]: K extends string ? T[K] extends SimpleValueType ? T[K] : T[K] extends Function ? never : MapToSerializable<T[K]> : never;
} ? T : never;
export const DEFAULT = Symbol("DEFAULT");
export interface TableWithNoColumns$Insert {
}
export interface TableWithNumericId$Insert {
    id?: number;
}
export interface TableWithCustomTypes$Insert {
    enum_type: unknown;
    enum_array_type: unknown[];
    table_type: unknown;
    table_array_type: unknown[];
}
export interface TableWithUuidId$Insert {
    id?: string;
}
export interface TableWithNullableFields$Insert {
    nullable?: string | null;
    nullable_with_default?: string | null;
    nullable_array?: string[] | null;
    nullable_array_with_default?: string[] | null;
}
export interface TableWithJsonJsonb$Insert<TJson = SerializableValueType, TJsonb = SerializableValueType> {
    json: MapToSerializable<TJson>;
    jsonb?: MapToSerializable<TJsonb> | null;
}
"
`;

exports[`Generator with insert types enabled generates insert types 2`] = `
[
  [
    "Unknown type detected: 'test_enum'. You have either disabled generation of the type or this is a bug.",
  ],
  [
    "Unknown type detected: 'test_enum'. You have either disabled generation of the type or this is a bug.",
  ],
  [
    "Unknown type detected: 'table_with_uuid_id'. You have either disabled generation of the type or this is a bug.",
  ],
  [
    "Unknown type detected: 'table_with_uuid_id'. You have either disabled generation of the type or this is a bug.",
  ],
]
`;

exports[`Generator with schema objects enabled generates schema objects 1`] = `
"import { z } from zod;
export type PrimitiveValueType = string | number | boolean | null;
export type SimpleValueType = PrimitiveValueType | Date;
export type SerializableValueType = SimpleValueType | {
    [key in string]: SerializableValueType | undefined;
} | Array<SerializableValueType> | ReadonlyArray<SerializableValueType>;
export type MapToSerializable<T> = T extends SerializableValueType ? T : T extends Array<infer U> ? Array<MapToSerializable<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<MapToSerializable<U>> : T extends {
    [K in keyof T]: K extends string ? T[K] extends SimpleValueType ? T[K] : T[K] extends Function ? never : MapToSerializable<T[K]> : never;
} ? T : never;
export const DEFAULT = Symbol("DEFAULT");
export const TableWithNoColumns$Schema = z.object({});
export const TableWithNumericId$Schema = z.object({
    id: z.number()
});
export const TableWithCustomTypes$Schema = z.object({
    enum_type: z.unknown(),
    enum_array_type: z.array(z.unknown()),
    table_type: z.unknown(),
    table_array_type: z.array(z.unknown())
});
export const TableWithUuidId$Schema = z.object({
    id: z.string()
});
export const TableWithNullableFields$Schema = z.object({
    nullable: z.string().nullable(),
    nullable_with_default: z.string().nullable(),
    nullable_array: z.array(z.string()).nullable(),
    nullable_array_with_default: z.array(z.string()).nullable()
});
export const TableWithJsonJsonb$Schema = z.object({
    json: z.unknown(),
    jsonb: z.unknown().nullable()
});
"
`;

exports[`Generator with schema objects enabled generates schema objects 2`] = `
[
  [
    "Unknown type detected: 'test_enum'. You have either disabled generation of the type or this is a bug.",
  ],
  [
    "Unknown type detected: 'test_enum'. You have either disabled generation of the type or this is a bug.",
  ],
  [
    "Unknown type detected: 'table_with_uuid_id'. You have either disabled generation of the type or this is a bug.",
  ],
  [
    "Unknown type detected: 'table_with_uuid_id'. You have either disabled generation of the type or this is a bug.",
  ],
]
`;

exports[`Generator with tables enabled generates tables 1`] = `
"export type PrimitiveValueType = string | number | boolean | null;
export type SimpleValueType = PrimitiveValueType | Date;
export type SerializableValueType = SimpleValueType | {
    [key in string]: SerializableValueType | undefined;
} | Array<SerializableValueType> | ReadonlyArray<SerializableValueType>;
export type MapToSerializable<T> = T extends SerializableValueType ? T : T extends Array<infer U> ? Array<MapToSerializable<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<MapToSerializable<U>> : T extends {
    [K in keyof T]: K extends string ? T[K] extends SimpleValueType ? T[K] : T[K] extends Function ? never : MapToSerializable<T[K]> : never;
} ? T : never;
export const DEFAULT = Symbol("DEFAULT");
export interface TableWithNoColumns {
}
export interface TableWithNumericId {
    id: number;
}
export interface TableWithCustomTypes {
    enum_type: unknown;
    enum_array_type: unknown[];
    table_type: TableWithUuidId;
    table_array_type: TableWithUuidId[];
}
export interface TableWithUuidId {
    id: string;
}
export interface TableWithNullableFields {
    nullable: string | null;
    nullable_with_default: string | null;
    nullable_array: string[] | null;
    nullable_array_with_default: string[] | null;
}
export interface TableWithJsonJsonb<TJson = SerializableValueType, TJsonb = SerializableValueType> {
    json: MapToSerializable<TJson>;
    jsonb: MapToSerializable<TJsonb> | null;
}
"
`;

exports[`Generator with tables enabled generates tables 2`] = `
[
  [
    "Unknown type detected: 'test_enum'. You have either disabled generation of the type or this is a bug.",
  ],
  [
    "Unknown type detected: 'test_enum'. You have either disabled generation of the type or this is a bug.",
  ],
]
`;

exports[`Generator with type objects enabled generates type objects 1`] = `
"export type PrimitiveValueType = string | number | boolean | null;
export type SimpleValueType = PrimitiveValueType | Date;
export type SerializableValueType = SimpleValueType | {
    [key in string]: SerializableValueType | undefined;
} | Array<SerializableValueType> | ReadonlyArray<SerializableValueType>;
export type MapToSerializable<T> = T extends SerializableValueType ? T : T extends Array<infer U> ? Array<MapToSerializable<U>> : T extends ReadonlyArray<infer U> ? ReadonlyArray<MapToSerializable<U>> : T extends {
    [K in keyof T]: K extends string ? T[K] extends SimpleValueType ? T[K] : T[K] extends Function ? never : MapToSerializable<T[K]> : never;
} ? T : never;
export const DEFAULT = Symbol("DEFAULT");
export const TableWithNoColumns$Types = {} as const;
export const TableWithNumericId$Types = {
    id: "int8"
} as const;
export const TableWithCustomTypes$Types = {
    enum_type: "test_enum",
    enum_array_type: "test_enum",
    table_type: "table_with_uuid_id",
    table_array_type: "table_with_uuid_id"
} as const;
export const TableWithUuidId$Types = {
    id: "uuid"
} as const;
export const TableWithNullableFields$Types = {
    nullable: "text",
    nullable_with_default: "text",
    nullable_array: "text",
    nullable_array_with_default: "text"
} as const;
export const TableWithJsonJsonb$Types = {
    json: "json",
    jsonb: "jsonb"
} as const;
"
`;

exports[`Generator with type objects enabled generates type objects 2`] = `[]`;
